+ Add nav button

--- a/webapp/resources/css/nav.css
+++ b/webapp/resources/css/nav.css
@@ -14,7 +14,7 @@ nav form {
 
 @media screen and (max-width:600px) {
 	nav form {
-		width: 80%;
+		width: 75%;
 	}
 }
 
@@ -26,4 +26,12 @@ nav .input-field label i, nav .input-field label.active i {
 	margin-bottom: 0;
 	background-color: rgba(255,255,255,0.5);
 	height: 56px;
+}
+
+#menuButton {
+	margin-left: 10px;
+	cursor: pointer;
+	color: #444;
+    background-color: rgba(255,255,255,0.5);
+    padding: 0 10px;
 }
