--- a/webapp/resources/css/app.css
+++ b/webapp/resources/css/app.css
@@ -1,3 +1,11 @@
 body {
 	font-family: 'Open Sans',sans-serif;
 }
+
+.blue-bg {
+	background-color: rgba(67,125,173,0.6);
+}
+
+.white-bg {
+	background-color: rgba(255,255,255,0.5) !important;
+}
