--- a/webapp/resources/css/app.css
+++ b/webapp/resources/css/app.css
@@ -21,25 +21,40 @@ body {
 	border-left: 5px solid white;
 }
 
-.container {
-	padding-top: 30px;
+.row {
+	padding: 30px 100px;
 }
 
-.row {
-	padding: 40px 0;
+@media screen and (max-width:600px) {
+	.row {
+		padding: 30px;
+	}
+}
+
+.row .col {
+	padding: 0;
 }
 
 .row-reversed {
 	color: white;
 }
 
-h4 {
+.headliner {
+	border-left: 5px solid rgb(67,125,173);
+	padding-left: 20px;
 	text-transform: uppercase;
 	color: rgb(67,125,173);
-	border-bottom: rgba(67,125,173, 0.6) 5px solid;
 }
 
-.row-reversed h4 {
+.row-reversed .headliner {
 	color: white;
-	border-bottom-color: white;
+	border-left: 5px solid white;
+}
+
+.row-reversed .headliner a {
+	color: white;
+}
+
+.card {
+	box-shadow: none;
 }
