--- a/webapp/resources/css/app.css
+++ b/webapp/resources/css/app.css
@@ -5,15 +5,15 @@ body {
 }
 
 .blue-bg {
-	background-color: rgb(67,125,173);
+	background: rgb(67,125,173);
 }
 
-.blue-bg-fade {
-	background-color: rgba(67,125,173,0.6);
+.blue-bg-fade, .row-reversed.blue-bg-fade {
+	background: rgba(67,125,173,0.6);
 }
 
 .white-bg {
-	background-color: rgba(255,255,255,0.5) !important;
+	background: rgba(255,255,255,0.5) !important;
 }
 
 .logo-text {
@@ -23,6 +23,8 @@ body {
 
 .row {
 	padding: 30px 100px;
+	background: url('https://s3-us-west-2.amazonaws.com/elasticbeanstalk-us-west-2-013875902762/resources/images/templatesv2/backgroundpattern.png');
+	margin-bottom: 0;
 }
 
 @media screen and (max-width:600px) {
