--- a/webapp/resources/css/app.css
+++ b/webapp/resources/css/app.css
@@ -16,6 +16,10 @@ body {
 	background: rgba(255,255,255,0.5) !important;
 }
 
+.grey-bg-fade {
+	background: rgba(66,66,66,0.6);
+}
+
 .logo-text {
 	text-transform: uppercase;
 	border-left: 5px solid white;
@@ -59,4 +63,41 @@ body {
 
 .card {
 	box-shadow: none;
+}
+
+.card .card-image .header-container, .card .card-image .header {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 1;
+}
+
+.card .card-image .header-container {
+	height: 135px;
+    border-bottom: 5px solid rgba(67,125,173,0.6);
+	opacity: 0;
+	transition: opacity 0.5s linear;
+	z-index: 2;
+}
+
+.card .card-image .header-container.grey-border {
+    border-bottom: 5px solid rgba(66,66,66,0.6);
+}
+
+.card .card-image .header-container:hover {
+	opacity: 1;
+}
+
+.card .card-image .header {
+	height: 125px;
+}
+
+.card .card-image .header .headliner  {
+	border-left: none;
+}
+
+.card .card-image .header .headliner h4 {
+	line-height: 125px;
+	margin: 0;
 }
