--- a/webapp/resources/css/app.css
+++ b/webapp/resources/css/app.css
@@ -93,11 +93,6 @@ body {
 	height: 125px;
 }
 
-.card .card-image .header .headliner  {
-	border-left: none;
-}
-
 .card .card-image .header .headliner h4 {
-	line-height: 125px;
-	margin: 0;
+	margin-top: 44px;
 }
