--- a/webapp/resources/css/app.css
+++ b/webapp/resources/css/app.css
@@ -1,23 +1,23 @@
 body {
-	font-family: 'Open Sans',sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	color: #424242;
 }
 
 .blue-bg {
-	background: rgb(67,125,173);
+	background: rgb(0, 150, 136);
 }
 
-.blue-bg-fade, .row-reversed.blue-bg-fade {
-	background: rgba(67,125,173,0.6);
+.blue-bg-fade {
+	background: rgba(0, 150, 136, 0.65);
 }
 
 .white-bg {
-	background: rgba(255,255,255,0.5) !important;
+	background: rgba(255, 255, 255, 0.5) !important;
 }
 
-.grey-bg-fade {
-	background: rgba(66,66,66,0.6);
+.grey-bg-fade, .row-reversed.grey-bg-fade {
+	background: rgba(66, 66, 66, 0.6);
 }
 
 .logo-text {
@@ -27,7 +27,8 @@ body {
 
 .row {
 	padding: 30px 100px;
-	background: url('https://s3-us-west-2.amazonaws.com/elasticbeanstalk-us-west-2-013875902762/resources/images/templatesv2/backgroundpattern.png');
+	background:
+		url('https://s3-us-west-2.amazonaws.com/elasticbeanstalk-us-west-2-013875902762/resources/images/templatesv2/backgroundpattern.png');
 	margin-bottom: 0;
 }
 
@@ -46,10 +47,10 @@ body {
 }
 
 .headliner {
-	border-left: 5px solid rgb(67,125,173);
+	border-left: 5px solid rgba(66, 66, 66, 0.6);
 	padding-left: 20px;
 	text-transform: uppercase;
-	color: rgb(67,125,173);
+	color: rgba(66, 66, 66, 0.6);
 }
 
 .row-reversed .headliner {
@@ -66,23 +67,23 @@ body {
 }
 
 .card .card-image .header-container, .card .card-image .header {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    top: 0;
-    z-index: 1;
+	position: absolute;
+	width: 100%;
+	left: 0;
+	top: 0;
+	z-index: 1;
 }
 
 .card .card-image .header-container {
 	height: 135px;
-    border-bottom: 5px solid rgba(67,125,173,0.6);
+	border-bottom: 5px solid rgba(0, 150, 136, 0.65);
 	opacity: 0;
 	transition: opacity 0.5s linear;
 	z-index: 2;
 }
 
 .card .card-image .header-container.grey-border {
-    border-bottom: 5px solid rgba(66,66,66,0.6);
+	border-bottom: 5px solid rgba(66, 66, 66, 0.6);
 }
 
 .card .card-image .header-container:hover {
