--- a/webapp/resources/css/app.css
+++ b/webapp/resources/css/app.css
@@ -42,19 +42,21 @@ body {
 	padding: 0;
 }
 
-.row-reversed {
+.row h4, .row h5 {
+	color: rgba(66, 66, 66, 0.6);
+}
+
+h4, h5, .row-reversed h4, .row-reversed h5 {
+	text-transform: uppercase;
 	color: white;
 }
 
 .headliner {
 	border-left: 5px solid rgba(66, 66, 66, 0.6);
 	padding-left: 20px;
-	text-transform: uppercase;
-	color: rgba(66, 66, 66, 0.6);
 }
 
 .row-reversed .headliner {
-	color: white;
 	border-left: 5px solid white;
 }
 
@@ -80,6 +82,27 @@ body {
 	opacity: 0;
 	transition: opacity 0.5s linear;
 	z-index: 2;
+}
+
+.card .card-image .img {
+	position: relative;
+	float: left;
+	width: 100%;
+	height: 300px;
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.card .card-image .img .blank-state {
+	height: 100%;
+	text-align: center;
+	padding: 20px;
+	padding-top: 130px;
+}
+
+.card .card-image .img .blank-state h5 {
+	margin: 0
 }
 
 .card .card-image .header-container.grey-border {
