--- a/webapp/resources/sass/card.scss
+++ b/webapp/resources/sass/card.scss
@@ -24,10 +24,10 @@
       height: 135px;
       border-bottom: $border-size rgba($blue-color, 0.65);
       opacity: 0;
-      transition: opacity 0.5s linear;
+      transition: opacity 0.1s linear;
       z-index: 2;
 
-      .grey-border {
+      &.grey-border {
         border-bottom: $grey-border;
       }
 
