--- a/webapp/resources/sass/card.scss
+++ b/webapp/resources/sass/card.scss
@@ -41,9 +41,7 @@
       float: left;
       width: 100%;
       height: 300px;
-      background-position: 50% 50%;
-      background-repeat: no-repeat;
-      background-size: cover;
+	  @include cover-bg;
 
       .blank-state {
         height: 100%;
