--- a/webapp/resources/sass/carlist.scss
+++ b/webapp/resources/sass/carlist.scss
@@ -2,24 +2,27 @@
 
 .list-item {
   &.car {
-    display: flex;
-    justify-content: space-around;
-
-    @include respond-to(phone) {
-      justify-content: flex-start;
-    }
+    height: 180px;
 
     .list-item-picture {
-      height: 110px;
+      height: 140px;
       position: static;
       opacity: 1;
       width: 200px;
+      display: inline-block;
+      float: right;
       @include cover-bg;
       background-position: center;
 
       @include respond-to(phone) {
         display: none;
       }
+    }
+
+    .list-item-text {
+      display: inline-block;
+      float: left;
+      width: 50%;
     }
   }
 }
