--- a/webapp/resources/sass/utils.scss
+++ b/webapp/resources/sass/utils.scss
@@ -73,3 +73,25 @@ $grey-border: $border-size rgba($primary-text-color, 0.6);
     @content;
   }
 }
+
+@mixin animation($animation) {
+  -webkit-animation: $animation;
+  -moz-animation:    $animation;
+  -o-animation:      $animation;
+  animation:         $animation;
+}
+
+@mixin keyframes($animationName) {
+  @-webkit-keyframes #{$animationName} {
+    @content;
+  }
+  @-moz-keyframes #{$animationName} {
+    @content;
+  }
+  @-o-keyframes #{$animationName} {
+    @content;
+  }
+  @keyframes #{$animationName} {
+    @content;
+  }
+}
