* Some small fixes following prod tests

--- a/webapp/resources/sass/card.scss
+++ b/webapp/resources/sass/card.scss
@@ -69,6 +69,13 @@
       height: 360px;
     }
   }
+
+  &.home-card {
+    .card-image {
+      @include cover-bg;
+      height: 340px;
+    }
+  }
 }
 
 .card.small, .card.medium, .card.large {
