--- a/webapp/resources/sass/carlist.scss
+++ b/webapp/resources/sass/carlist.scss
@@ -2,6 +2,10 @@
   &.car {
     height: 180px;
 
+    @include respond-to(phone) {
+      height: 320px;
+    }
+
     .list-item-picture {
       height: 140px;
       position: static;
@@ -13,7 +17,9 @@
       background-position: center;
 
       @include respond-to(phone) {
-        display: none;
+        float: left;
+        width: 100%;
+        height: 200px;
       }
     }
 
@@ -21,6 +27,11 @@
       display: inline-block;
       float: left;
       width: 50%;
+
+      @include respond-to(phone) {
+        width: 100%;
+        text-align: center;
+      }
     }
   }
 }
