--- a/webapp/resources/sass/list.scss
+++ b/webapp/resources/sass/list.scss
@@ -8,7 +8,10 @@
 
   h4, h5, h6 {
     color: $primary-text-color;
-    max-width: 300px;
+
+    @include respond-to(phone) {
+      font-size: 1.5rem;
+    }
   }
 
   .list-item-picture {
